# task

./: README.md  main.py  manage.py  pyproject.toml  requirements.txt
ai_product_recom/: asgi.py  settings.py  urls.py  wsgi.py
recommendations/: views.py
templates/: index.html
