[project]
name = "spearmint-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "gunicorn>=26.0.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]
